--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,24 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
 
+      - uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Download deps
         run: go get
+      
       # Runs a set of commands using the runners shell
       - name: Build executable
         run: go build
+
+      - name: Upload executable
+        uses: actions/upload-artifact@v2
+        with:
+          name: remote package
+          path: |
+            ./remote.exe
+            ./assets/
