--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,5 +13,9 @@ jobs:
         
       - name: Download dependencies
         run: npm i
-      - run: npm test
-      - run: npm lint
+        
+      - name: Run tests  
+        run: npm test --prefix remote-frontend/
+        
+      - name: Lint files
+        run: npm lint --prefix remote-frontend/
