--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
 
   test:
+
+    runs-on: ubuntu-16.04
+    
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
