--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,4 +21,4 @@ jobs:
         run: npm test --prefix remote-frontend/
         
       - name: Lint files
-        run: npm lint --prefix remote-frontend/
+        run: npm run lint --prefix remote-frontend/
