Run tests on ubuntu

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -68,3 +68,9 @@ jobs:
           name: remote package
           path: |
             ./remote.exe
+
+  build-distributable:
+
+    runs-on: ubuntu-16.04
+
+    
