--- a/remote-frontend/package.json
+++ b/remote-frontend/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "typescript": "^4.2.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -41,7 +42,9 @@
     ]
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^9.15.5",
     "@types/jest": "^26.0.20",
+    "@types/react": "^17.0.4",
     "msw": "^0.25.0",
     "prettier": "2.2.1"
   }
