--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,38 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+
+  build-frontend:
+
+    runs-on: ubuntu-16.04
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+
+      - name: Download dependencies
+        run: npm i --prefix remote-frontend/
+
+      - name: build
+        run: npm run build --prefix remote-frontend/
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: frontend-build
+          path: |
+            ./remote-frontend/build
+
+
+  build-backend:
     # The type of runner that the job will run on
     runs-on: windows-latest
 
@@ -39,7 +69,23 @@ jobs:
       - name: Upload executable
         uses: actions/upload-artifact@v2
         with:
-          name: remote package
+          name: backend-executable
           path: |
             ./remote.exe
-            ./assets/
+
+
+    build-distributable:
+      runs-on: ubuntu-latest
+      needs: [build-frontend, build-backend]
+      steps:
+        - uses: actions/download-artifact@v2
+          with:
+            name: backend-executable
+
+        - uses: actions/download-artifact@v2
+          with:
+            name: frontend-build
+            path: ./assets
+
+        - name: List directory
+          run: ls -R
