--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,9 @@ name: build
 # Controls when the action will run. 
 on:
   workflow_dispatch:
-    version:
-      required: true
+    inputs:
+      version:
+        required: true
 
 jobs:
 
