Implement welcome page to greet the user with QR-Code

--- a/remote-frontend/.env.development
+++ b/remote-frontend/.env.development
@@ -1,3 +1,4 @@
 REACT_APP_API_SCHEMA=http
 REACT_APP_API_PORT=8000
 REACT_APP_API_HOST=192.168.178.21
+REACT_APP_QR_URL=http://192.168.178.21:8000/api/settings/whoami/qr
