--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-
+      - name: Generate cache key
+        run: echo ${{ hashFiles('**/package-lock.json') }}
+      
       - uses: actions/cache@v2
         with:
           path: ~/.npm
